deleted go tool

--- a/jenkins-CI-for-argo/Jenkinsfile
+++ b/jenkins-CI-for-argo/Jenkinsfile
@@ -10,11 +10,7 @@ pipeline {
       NETWORK="tools_jenkins"
       SONARQUBE_URL="http://sonarqube:9000"
       PROJECT_KEY="e-commerce-microservice"
-      REGISTRY_CRED = 'docker_token'
-    }
-
-    tools {
-      go 'go_120'
+      REGISTRY_CRED = 'docker_creds'
     }
 
     agent any
